# veriFi

./: .env.example  .gitignore  CLAUDE.md  Makefile  PROJECT_PROGRESS.md  README.md  install_missing.sh  pyproject.toml  scaffold_phase2.sh  scaffold_phase3.sh  scaffold_phase4.sh  setup.sh
configs/: default.yaml
scripts/: analyze_results.py  calibrate_clip_prompts.py  diagnose_signals.py  download_weights.py  run_benchmark.py  test_phase2.py  test_phase3.py  test_phase4.py  validate_setup.py
src/verifi/: config.py
src/verifi/agent/: investigator.py  planner.py
src/verifi/benchmark/: __init__.py  metrics.py  results.py  runner.py  visualizer.py
src/verifi/detectors/: base.py  clip_detector.py  effnet_detector.py  frequency.py  jpeg_ghost.py  noise_residual.py  temporal.py
src/verifi/ensemble/: aggregator.py
src/verifi/explainability/: gradcam.py  heatmap_renderer.py
src/verifi/explanation/: llm_explainer.py  prompts.py
src/verifi/ingestion/: downloader.py  validator.py
src/verifi/pipeline/: orchestrator.py
src/verifi/preprocessing/: face_aligner.py  face_detector.py  face_tracker.py
src/verifi/sampling/: frame_selector.py  quality_filter.py  scene_detector.py
src/verifi/tools/: analysis_tools.py  (+4 more)
tests/: conftest.py
tests/test_agent/: test_investigator.py
tests/test_benchmark/: test_datasets.py  test_metrics.py  test_results.py
tests/test_detectors/: test_frequency.py  test_temporal.py
tests/test_ensemble/: test_aggregator.py
tests/test_explainability/: test_gradcam.py
tests/test_pipeline/: test_orchestrator.py
tests/test_preprocessing/: test_face_detector.py
tests/test_sampling/: test_frame_selector.py  test_scene_detector.py
tests/test_tools/: test_tool_interface.py
(+6 files in other folders)
