[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verifi"
version = "0.1.0"
description = "Forensic AI-generated video detection with explainability"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Core ML
    "torch>=2.2",
    "torchvision>=0.17",
    "open-clip-torch>=2.24",
    "timm>=0.9",
    "facenet-pytorch>=2.5",

    # Video + image processing
    "opencv-python-headless>=4.9",
    "ffmpeg-python>=0.2",
    "Pillow>=11.0",
    "scipy>=1.12",

    # Explainability
    "grad-cam>=1.5",

    # API + infrastructure
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.6",
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "pyyaml>=6.0",
    "httpx>=0.27",

    # Video download
    "yt-dlp>=2024.1",

    # LLM
    "anthropic>=0.40",

    # Utilities
    "structlog>=24.1",
    "efficientnet-pytorch>=0.7",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-ollama>=0.2",
    "langchain-anthropic>=0.3",
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "huggingface-hub>=0.20",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.2",
    "ipykernel>=6.28",
    "matplotlib>=3.8",
]
benchmark = [
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
